Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13288

a performance regression on the single stream write

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • master(commit:2c0b2b7), CentOS8.1
    • 3
    • 9223372036854775807

      The latest master(commit:2c0b2b7) has a performance regression on the single stream write below.

      test node: Xeon(R) Gold 5218 CPU @ 2.30GHz, 96GB memory, 1 x HDR-100
      lustre params: osc.*.max_pages_per_rpc=16M osc.*.max_rpcs_in_flight=16 osc.*.max_dirty_mb=512 llite.*.max_read_ahead_mb=2048 osc.*.checksums=0
      
      # ior -w -t 1m -b 192g -e -o /scratch/testdir/file
      master(commit:2c0b2b7)
      Max Write: 799.98 MiB/sec (838.84 MB/sec)
      
      2.13.0
      Max Write: 2268.02 MiB/sec (2378.19 MB/sec)
      

            stancheff Shaun Tancheff
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: